# sim-hub

./: .cspell.json  .gitignore  DESIGN.md  Makefile  README.md  TODO.md  check_minio.go  config-api.yaml  config-worker.yaml  config.yaml  docker-compose.yml  go.mod  go.sum  modules.yaml  run-demo-repo.sh  run-external-demo.sh
apps/demo-repo/: index.html
apps/ext-apps/: index.html  package-lock.json  package.json  vite.config.ts
apps/ext-apps/demo-form/: index.html
apps/ext-apps/demo-form/src/: main.ts
apps/ext-apps/demo-form/src/components/: DemoAction.ts  ScoreRater.vue  ScoreRaterRemote.ts
apps/ext-apps/demo-preview/: index.html
apps/ext-apps/demo-repo/: index.html
apps/ext-apps/demo-view/: index.html
apps/ext-apps/demo-view/src/: main.ts
apps/ext-apps/src/: main.ts
apps/terrain/: index.html  package-lock.json  package.json  vite.config.ts
apps/terrain/src/: App.vue
apps/terrain/src/bridge/: guest.ts
cmd/simhub-api/: main.go
cmd/simhub-cli/: main.go
cmd/simhub-worker/: main.go
docs/: README.md
docs/design/: 00_index.md  01_architecture_overview.md  02_resource_management.md  03_storage_strategy.md  04_search_engine.md  05_authentication_security.md  06_frontend_engineering.md
docs/ops/: 01_deployment_guide.md  02_integration_guide.md  03_config_guide.md  04_worker_extension.md  05_frontend_extension.md  06_troubleshooting.md  07_api_reference.md
docs/sdk/: README.md
docs/testing/: 01_testing_strategy.md
drivers/: main.go
examples/cpp-sdk/: README.md
examples/cpp-sdk/01_cli_wrapper_http_mode/: main.cpp  simhub_client.h
examples/cpp-sdk/02_sdk_integration_sts_mode/: CMakeLists.txt  main.cpp  simhub_client.h
internal/biz/: resource.go
internal/conf/: conf.go
internal/core/module/: module.go
internal/data/: db.go  es.go  minio.go  nats.go
internal/model/: auth.go  resource.go
internal/modules/resource/: api_test.go  middleware.go  module.go
internal/modules/resource/core/: auth.go  bundle_test.go  dto.go  dto_create.go  events.go  interfaces.go  reader.go  reader_types.go  result_watcher.go  robustness_test.go  scheduler.go  search_test.go  state_machine_test.go  uploader.go  usecase.go  usecase_test.go  worker.go  writer.go  writer_create.go  writer_test.go
internal/modules/resource/core/mocks/: storage_mock.go
internal/search/: client.go  es_worker.go  tika.go
internal/server/: middleware.go
internal/service/: upload.go
internal/ui/: ui.go
pkg/logger/: logger.go
pkg/storage/: interface.go
pkg/storage/minio/: store.go
pkg/sts/: sts.go
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: multipart_upload.cpp  query_and_download.cpp
sdk/cpp/examples/01_quickstart/: CMakeLists.txt  main.cpp
sdk/cpp/examples/01_simple_upload/: CMakeLists.txt  main.cpp
sdk/cpp/examples/02_async_ops/: main.cpp
sdk/cpp/examples/02_sts_upload/: CMakeLists.txt  main.cpp
sdk/cpp/examples/03_bundle_download/: main.cpp
sdk/cpp/examples/04_advanced_upload/: main.cpp
sdk/cpp/examples/05_multipart_upload/: main.cpp
sdk/cpp/examples/single_header_demo/: CMakeLists.template.txt  CMakeLists.txt  main.cpp
sdk/cpp/include/simhub/: client.h  simhub.hpp  types.h
sdk/cpp/src/: client.cpp  simhub_impl.cpp
sdk/cpp/tests/: CMakeLists.txt  stress_test.cpp  test_multipart_logic.cpp  test_result.cpp
sdk/go/: README.md  client.go  client_test.go  go.mod  models.go
sdk/go/example/: go.mod  main.go
sdk/java/: README.md  pom.xml
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: demo.py
sdk/python/simhub/: __init__.py  client.py  models.py
sdk/python/tests/: test_client.py
tests/e2e/: main.go
tests/stress/: main.go
web/: .env.development  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/public/: modules.json
web/src/: App.vue  components.d.ts  env.d.ts  main.ts
web/src/components/: ResourcesList.vue  Workstation.vue
web/src/components/common/: DynamicSchemaForm.vue  GlobalSearch.vue
web/src/components/common/editors/: NumberEditor.vue  SelectEditor.vue  SwitchEditor.vue  TextEditor.vue
web/src/components/resource/: ResourceList.vue
web/src/components/resource/components/: CategorySidebar.vue  DependencyDrawer.vue  DependencyEditor.vue  HistoryDrawer.vue  MetadataEditor.vue  OnlineCreateDialog.vue  ResourceCardView.vue  ResourceDetailDrawer.vue  ResourceSkeleton.vue  ResourceStewardDialogs.vue  ResourceTableView.vue  TagEditDialog.vue  UploadDialog.vue
web/src/components/resource/components/viewers/: DefaultIconPreview.vue  DependencyGraph.vue  ExternalViewer.vue  FolderPreview.vue  GLBPreview.vue  ImagePreview.vue  ResourcePreview.vue
web/src/components/resource/composables/: useCategory.ts  useDependency.ts  useHistory.ts  useResourceAction.ts  useResourceList.ts  useTags.ts  useUpload.ts
web/src/components/resource/composables/__tests__/: useCategory.spec.ts  useResourceList.spec.ts
web/src/components/resource/previewers/: DocPreview.vue  ExternalViewer.vue  GLBPreview.vue  GeoPreview.vue  JsonPreview.vue  ResourcePreview.vue  VideoPreview.vue
web/src/components/resource/previewers/__tests__/: ExternalViewer.spec.ts  FolderPreview.spec.ts
web/src/components/resource/views/: ResourceCardView.vue  ResourceDataGrid.vue  ResourceGalleryView.vue  ResourceTableView.vue
web/src/components/settings/: TokenSettings.vue
web/src/core/: auth.ts  moduleManager.ts  registerStandardViews.ts  types.ts
web/src/core/__tests__/: moduleManager.spec.ts
web/src/core/bridge/: host.ts  types.ts
web/src/core/constants/: resource.ts
web/src/core/types/: resource.ts
web/src/core/utils/: format.ts  request.ts  resourceModule.ts  tree.ts
web/src/core/views/: IframeContainer.vue
web/src/modules/: external_example.ts
web/src/modules/resource/: index.ts
web/src/modules/scenario/: index.ts
web/src/modules/scenario/views/: ScenarioList.vue
web/src/modules/terrain/: TerrainList.vue  index.ts
web/src/views/: Login.vue
web/tests-e2e/: advanced-scenarios.spec.ts  resource-flow.spec.ts
(+19 files in other folders)
